Added link to Q-clue modal

--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@ style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-w
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="dist/assets/img/portfolio/Q-clue.png" alt="" />
+                                    <a target="_blank" href="https://github.com/puleri/quarantine-clue"><img class="img-fluid rounded mb-5" src="dist/assets/img/portfolio/Q-clue.png" alt="" /></a>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">During quarantine I learned that my family loves playing Clue but playing it on a smart device does not capture the essence of the game. You simply have to see and hear who you are playing with. To solve this problem I created a terminal Clue shuffler that eliminates the problem of the dealer in remote Clue. Playing together on zoom, Q-Clue plays the same as always except every household uses their own board, and players must look away from the screen when dealing.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
