added typescript icon to skills

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <div class="container">
                 <!-- <a class="navbar-brand js-scroll-trigger" href="#page-top">Matthew Puleri</a> -->
                 <a class="navbar-brand js-scroll-trigger" href="#page-top">Matthew Puleri</a>
-                <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
+                <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -192,6 +192,10 @@
                         <div class="col-4 col-md-6 col-lg-4 mb-5">
                             <pre><small><label class="icon-label"  for="fa-js-square">JavaScript</label></small></pre>
                             <i class="profile-icons-space fab fa-js-square fa-5x"></i>
+                        </div>
+                        <div class="col-4 col-md-6 col-lg-4 mb-5">
+                            <pre><small><label class="icon-label"  for="fa-js-square">TypeScript</label></small></pre>
+                            <img class="typescript-icon" src="./dist/assets/img/typescript.png"/>
                         </div>
                         <div class="col-4 col-md-6 col-lg-4 mb-5">
                             <pre><small><label class="icon-label"  for="fa-react">React</label></small></pre>
