--- a/index.html
+++ b/index.html
@@ -20,12 +20,9 @@
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1+Code:wght@200;400;600&display=swap" rel="stylesheet">
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="dist/css/styles.css" rel="stylesheet" />
     </head>
@@ -60,7 +57,7 @@
                         <!-- Masthead Avatar Image-->
                         <img class="masthead-avatar mb-5" src="dist/assets/img/matt-puleri.jpeg" alt="" />
                     </div>
-                    <div class="col-md-6 col-lg-6 col-sm-12 ml-auto"><br /><br /><br /><h4>Ready to create innovative tech solutions and clean websites that meet your design needs.</h4><br />
+                    <div class="col-md-6 col-lg-6 col-sm-12 ml-auto"><br /><br /><br /><h4 class="font-weight-light">Ready to create innovative tech solutions and clean websites that meet your design needs.</h4><br />
                     </div>
                 </div>
                 <!-- Icon Divider-->
