--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     </head>
     <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+        <nav class="navbar navbar-expand-lg bg-light text-uppercase fixed-top" id="mainNav">
             <div class="container">
                 <!-- <a class="navbar-brand js-scroll-trigger" href="#page-top">Matthew Puleri</a> -->
-                <a class="navbar-brand js-scroll-trigger" href="#page-top">Matthew Puleri</a>
+                <a class="navbar-brand js-scroll-trigger" href="#page-top"><i class="fas fa-mountain"></i> Matthew Puleri</a>
                 <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 
                     <i class="fas fa-bars"></i>
