--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </div>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
-                    <div class="divider-custom-line"></div>
+                    <!-- <div class="divider-custom-line"></div> -->
                     <!-- <div class="divider-custom-icon"></div>
                     <div class="divider-custom-line"></div> -->
                 </div>
