updated resume and hamburger color

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="container">
                 <!-- <a class="navbar-brand js-scroll-trigger" href="#page-top">Matthew Puleri</a> -->
                 <a class="navbar-brand js-scroll-trigger" href="#page-top"><i class="fas fa-mountain"></i> Matthew Puleri</a>
-                <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold text-dark rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 
                     <i class="fas fa-bars"></i>
                 </button>
@@ -242,7 +242,7 @@ style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-w
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" target="_blank" href="https://documentcloud.adobe.com/link/track?uri=urn%3Aaaid%3Ascds%3AUS%3A6ac25e18-26b5-48fc-a578-34e00adf331a#pageNum=1">
+                    <a class="btn btn-xl btn-outline-light" target="_blank" href="https://documentcloud.adobe.com/link/track?uri=urn:aaid:scds:US:7cc97cbb-db5d-4623-950b-e4572a59434b">
                         <i class="fas fa-link mr-2"></i>
                         My resume
                     </a>
@@ -318,7 +318,7 @@ style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-w
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
                         <a class="btn btn-outline-light btn-social mx-1" target="_blank" href="https://github.com/puleri"><i class="fab fa-github"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" target="_blank" href="https://www.linkedin.com/in/matthew-puleri/"><i class="fab fa-fw fa-linkedin-in"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" target="_blank" href="https://documentcloud.adobe.com/link/track?uri=urn:aaid:scds:US:716125e7-a27b-40d0-ad16-fba844e89015"><i class="fas fa-file"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" target="_blank" href="https://documentcloud.adobe.com/link/track?uri=urn:aaid:scds:US:7cc97cbb-db5d-4623-950b-e4572a59434b"><i class="fas fa-file"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" target="_blank" href="mailto:mpuleri@vectorventures.com"><i class="fas fa-paper-plane"></i></a>
                     </div>
                     <!-- Footer About Text-->
