added greyscale to portfolio blocks

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <!-- Portfolio Grid Items-->
                 <div class="row justify-content-center">
                     <!-- portfolio item -->
-                    <div class="col-md-6 col-lg-6 mb-5">
+                    <div class="col-md-6 col-lg-6 mb-5 greyscale">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal8">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                     <!-- portfolio item -->
-                    <div class="col-md-6 col-lg-6 mb-5">
+                    <div class="col-md-6 col-lg-6 mb-5 greyscale">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal7">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
@@ -100,7 +100,7 @@
                         </div>
                     </div>
                     <!-- Portfolio Item 1-->
-                    <div class="col-md-6 col-lg-6 mb-5">
+                    <div class="col-md-6 col-lg-6 mb-5 greyscale">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
@@ -109,7 +109,7 @@
                         </div>
                     </div>
                     <!-- 2 -->
-                    <div class="col-md-6 col-lg-6 mb-5">
+                    <div class="col-md-6 col-lg-6 mb-5 greyscale">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
@@ -118,7 +118,7 @@
                         </div>
                     </div>
                     <!-- Portfolio Item 1-->
-                    <div class="col-md-6 col-lg-6 mb-5">
+                    <div class="col-md-6 col-lg-6 mb-5 greyscale">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
@@ -127,7 +127,7 @@
                         </div>
                     </div>
                     <!-- Portfolio Item 2-->
-                    <div class="col-md-6 col-lg-6 mb-5">
+                    <div class="col-md-6 col-lg-6 mb-5 greyscale">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
@@ -136,7 +136,7 @@
                         </div>
                     </div>
                     <!-- Portfolio Item 3-->
-                    <div class="col-md-6 col-lg-6 mb-5">
+                    <div class="col-md-6 col-lg-6 mb-5 greyscale">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
@@ -145,7 +145,7 @@
                         </div>
                     </div>
                     <!-- Portfolio Item 4-->
-                    <div class="col-md-6 col-lg-6 mb-5 mb-lg-0">
+                    <div class="col-md-6 col-lg-6 mb-5 greyscale mb-lg-0">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
