Let's connect message added and bio updated

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-12 ml-auto"><p class="lead">A music student turned developer, I studied in Music City first and then remotely with Bellevue College and General Assembly. I apply creativity to coding. Through object-oriented development I have created 4+ web applications with RESTful API's and scalable design. I pride myself on being an excellent team player with a positive attitude. When I am not coding you can either find me playing pickleball with my partner, petting my cat, or exploring the Outlands in Apex Legends with my friends across the globe.</p></div>
+                    <div class="col-lg-12 ml-auto"><p class="lead">An audio engineer turned developer, my love for music quickly becamse a love for the software that makes it possible, then -- the user interfaces that build immersive experiences around the music you love. Since 2019, I have created 10+ web applications with RESTful API's, scalable design, and adherence to coding's best practices. I pride myself on my attitude, work ethic, and flexibility, and when I am not coding you can either find me playing pickleball with my partner, petting my cat, or exploring the PNW. <a class="lead" target="_blank" href="https://www.linkedin.com/in/matthew-puleri/">Let's Connect!</a></p></div>
                     <!-- <div class="col-lg-4 mr-auto"><p class="lead"></p></div> -->
                 </div>
                 <div class="profile-icons">
