--- a/index.html
+++ b/index.html
@@ -312,6 +312,7 @@ style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-w
                     <!-- Footer Location-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Location</h4>
+                        <br/>
                         <p class="lead mb-0">
                             Greater Seattle Area
                         </p>
@@ -319,6 +320,7 @@ style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-w
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
+                        <br/>
                         <a class="btn btn-outline-light btn-social mx-1" target="_blank" href="https://github.com/puleri"><i class="fab fa-github"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" target="_blank" href="https://www.linkedin.com/in/matthew-puleri/"><i class="fab fa-fw fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" target="_blank" href="https://documentcloud.adobe.com/link/track?uri=urn:aaid:scds:US:7cc97cbb-db5d-4623-950b-e4572a59434b"><i class="fas fa-file"></i></a>
@@ -329,8 +331,7 @@ style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-w
                         <h4 class="text-uppercase mb-4">About the site</h4>
                         <p class="lead mb-0">
                             This portfolio was created with HTML/CSS, Bootstrap, JavaScript, ATOM, and
-                            <a target="_blank" href="https://github.com/puleri">GitHub</a>
-                            .
+                            <a class="github-link" target="_blank" href="https://github.com/puleri">GitHub</a>.
                         </p>
                     </div>
                 </div>
@@ -338,7 +339,7 @@ style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-w
         </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright © Matthew Puleri's Portfolio 2020</small></div>
+            <div class="container"><small>Copyright © Matthew Puleri's Portfolio 2022</small></div>
         </div>
         <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
         <div class="scroll-to-top d-lg-none position-fixed">
