--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </div>
                     <div class="col-md-6 col-lg-6 col-sm-12 ml-auto"><br /><br /><br /><h4 class="font-weight-light">Do you have a malnourished product that needs engaging technical solutions, or an app idea singing for development?</h4><br />
                         <a class="say-hello-link" target="_blank" href="https://www.linkedin.com/in/matthew-puleri/">
-                        Say hello <span class="hello-emoji">👋</span>
+                        Say hello <span class="hello-emoji">👋🏼</span>
                         </a>
                     </div>
                 </div>
