--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <!-- Masthead Avatar Image-->
                         <img class="masthead-avatar mb-5" src="dist/assets/img/matt-puleri.jpeg" alt="" />
                     </div>
-                    <div class="col-md-6 col-lg-6 col-sm-12 ml-auto"><br /><br /><br /><h4 class="font-weight-light">Do you have a malnourished product that needs engaging technical solutions, or an app idea singing for development?</h4><br />
+                    <div class="col-md-6 col-lg-6 col-sm-12 ml-auto"><br /><br /><br /><h4 class="font-weight-light">Do you have a fantastic product in need of engaging technical solutions, or an app singing for development?</h4><br />
                         <a class="say-hello-link" target="_blank" href="https://www.linkedin.com/in/matthew-puleri/">
                         Say hello <span class="hello-emoji">👋🏼</span>
                         </a>
