--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-w
                         <a class="btn btn-outline-light btn-social mx-1" target="_blank" href="https://github.com/puleri"><i class="fab fa-github"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" target="_blank" href="https://www.linkedin.com/in/matthew-puleri/"><i class="fab fa-fw fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" target="_blank" href="https://documentcloud.adobe.com/link/track?uri=urn:aaid:scds:US:7cc97cbb-db5d-4623-950b-e4572a59434b"><i class="fas fa-file"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" target="_blank" href="mailto:mpuleri@vectorventures.com"><i class="fas fa-paper-plane"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" target="_blank" href="mailto:puleri.mp4@gmail.com"><i class="fas fa-paper-plane"></i></a>
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
